# Ace3x

./: CMakeLists.txt  README.md  conanfile.txt  uncrustify.cfg
resources/: resources.qrc
scripts/: run-clang-format.ps1
src/: Entry.cpp  Entry.hpp  FileViewModel.cpp  FileViewModel.hpp  FrameDecoder.cpp  FrameDecoder.hpp  Main.cpp  PegEntry.cpp  PegEntry.hpp  ProxyModel.cpp  ProxyModel.hpp  Util.cpp  Util.hpp  VppEntry.cpp  VppEntry.hpp  file-info.hpp  fs.cpp  fs.hpp  main.cpp  qt-sink.hpp  tree-model.cpp  tree-model.hpp
src/Formats/: P3D.hpp  Peg.hpp  VifMesh.cpp  VifMesh.hpp  Vpp.hpp  vif-mesh.hpp  vpp-v1.hpp  vpp-v2.hpp  vpp.hpp
src/Widgets/: FileInspector.cpp  FileInspector.hpp  MainWindow.cpp  MainWindow.hpp  file-info-frame.cpp  file-info-frame.hpp  main-window.cpp  main-window.hpp
src/Widgets/Viewers/: ImageViewer.cpp  ImageViewer.hpp  P3DViewer.cpp  P3DViewer.hpp  PlaintextViewer.cpp  PlaintextViewer.hpp  VIMViewer.cpp  VIMViewer.hpp  Viewer.cpp  Viewer.hpp
src/Widgets/format-viewers/: image-viewer.cpp  image-viewer.hpp  p3d-viewer.cpp  p3d-viewer.hpp  plaintext-viewer.cpp  plaintext-viewer.hpp  viewer.hpp  vim-viewer.cpp  vim-viewer.hpp
src/format-readers/: archive-entry.hpp  peg-texture-decoder.cpp  peg-texture-decoder.hpp  peg.cpp  peg.hpp  validation-error.cpp  validation-error.hpp  vf2.cpp  vf2.hpp  vif-mesh.cpp  vif-mesh.hpp  vim.cpp  vim.hpp  vpp-archive.hpp  vpp-common.hpp  vpp-v1.cpp  vpp-v1.hpp  vpp-v2.cpp  vpp-v2.hpp  vpp.cpp  vpp.hpp
src/formats/: p3d.hpp  peg.hpp  types.hpp  vf2.hpp  vim.hpp
src/tree-entries/: peg-entry.cpp  peg-entry.hpp  tree-entry-sort-proxy.cpp  tree-entry-sort-proxy.hpp  tree-entry.cpp  tree-entry.hpp  vpp-entry.cpp  vpp-entry.hpp
src/tree-entry/: file-entry.cpp  file-entry.hpp  peg-entry.cpp  peg-entry.hpp  tree-entry-sort-proxy.cpp  tree-entry-sort-proxy.hpp  tree-entry.cpp  tree-entry.hpp  vpp-entry.cpp  vpp-entry.hpp
src/tree-model/: sort-proxy.cpp  sort-proxy.hpp  tree-model.cpp  tree-model.hpp
src/vfs/: mio.hpp  mmap-vfs.cpp  mmap-vfs.hpp  vfs-entry.hpp  vfs.hpp
src/widgets/: file-info-frame.cpp  file-info-frame.hpp  main-window.cpp  main-window.hpp  view-manager.cpp  view-manager.hpp
src/widgets/format-viewers/: empty-viewer.cpp  empty-viewer.hpp  image-viewer.cpp  image-viewer.hpp  p3d-viewer.cpp  p3d-viewer.hpp  plaintext-viewer.cpp  plaintext-viewer.hpp  vf2-viewer.cpp  vf2-viewer.hpp  viewer.cpp  viewer.hpp  vim-viewer.cpp  vim-viewer.hpp
ui/: ImageViewer.ui  P3DViewer.ui  PlaintextViewer.ui  empty-viewer.ui  file-info-frame.ui  image-viewer.ui  main-window.ui  p3d-viewer.ui  plaintext-viewer.ui  vf2-viewer.ui  vim-viewer.ui
